<resources>
    <string name="app_name">Anavitoria Fanclube</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_quiz">Começar >>></string>
    <string name="finalizar_quiz">Finalizar quiz</string>
    <string name="menu_musics">Musicas</string>
    <string name="menu_quiz">Quiz</string>
    <string name="txt_quiz">Quem é você na dupla Anavitória?</string>
    <string name="quiz">Quiz</string>
    <string name="txt_legal">Legal!</string>
    <string name="anavitoria_banner">AnaVitoria Banner</string>
    <string name="txt_desc_quiz">"    Será que sua personalidade é mais parecida com a da Ana? Ou será que é com a da Vitória?\n\n\n Clique em começar, responda algumas perguntas e descubra!"</string>
    <string name="botao_continuar">Botão continuar</string>

    <string name="txt_descritivo_ana">Uma pessoa meiga e carinhosa, conhecida por estar sempre se preocupando com o próximo e as vezes, sofre muito com isso. Mas não se deixe abalar! Afinal, mesmos que coisas ruins aconteçam, tem sempre uma Vitória com uma coxinha de jaca para te levantar (mas tome cuidado com a piscina).</string>
    <string name="txt_descritivo_vitoria">Todos te conhecem por ser uma pessoa original e independente, dona de um estilo próprio e original. De um jeito diferente, conquista o mundo inteiro com sua personalidade única e sociável. Embora ame cachorrinhos, não se deixe enganar fácil com um Sérgio, hein?</string>
    <string name="anavitoria">Anavitória</string>
    <string name="anavit_fc">Anavitória FanClube</string>
    <string name="siga_redes_sociais">Siga as meninas nas redes sociais!</string>

    <string name="letra_outroria">\"Quando vi, já veio sim\nTomou parte de mim\nLevou embora o meu pesar\"</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Anavitória Fanclube</string>
    <string name="senha">Senha</string>
    <string name="placeholder_email">Digite aqui seu e-mail</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="placeholder_senha">Digite aqui a senha</string>
    <string name="entrar">Entrar</string>

    <string name="hint_user">Digite o nome de usuário</string>
    <string name="txt_pass">Digite a senha:</string>
    <string name="hint_pass">Digite a senha</string>
    <string name="txt_confirm_pass">Confirme a senha:</string>
    <string name="hint_confirm_pass">Digite a senha</string>
    <string name="txt_sex">Gênero:</string>
    <string name="text_rb_fem">Feminino</string>
    <string name="text_rb_masc">Masculino</string>
    <string name="text_rb_undefined">Prefiro não informar</string>
    <string name="txt_fav">Quem é sua preferida?</string>
    <string name="txt_cb_album">Álbum</string>
    <string name="text_cb_dvd">DVD</string>
    <string name="text_cb_camiseta">Camiseta</string>
    <string name="text_rb_moletom">Moletom</string>
    <string name="text_cb_colar">Colar</string>
    <string name="text_cb_agenda">Agenda</string>
    <string name="text_cb_poster">Poster</string>
    <string name="text_btn_cadastro">Cadastrar-se</string>
    <string name="text_cb_pulseira">Pulseira</string>
    <string name="text_cb_outros">Outros</string>
    <string name="txt_goodies">Goodies:</string>
    <string name="title_cadastro">Cadastro de usuário</string>
    <string name="txt_email">Digite seu email:</string>
    <string name="hint_email">Digite o email</string>
    <string name="title_success">Usuário criado com sucesso!</string>
    <string name="txt_descript_user">Nome de usuário:</string>
    <string name="txt_descript_email">Email:</string>
    <string name="txt_descript_senha">Senha:</string>
    <string name="txt_descript_genero">Gênero:</string>
    <string name="txt_descript_fav">Cantora favorita:</string>
    <string name="txt_descript_goodies">Goodies:</string>
    <string name="txt_music">\"Quando vi, já veio sim                             Tomou parte de mim                              Levou embora o meu pesar                              Teu ver me encanta, emfim                              Canta perto de mim                              Tua voz amansa o teu olhar\"</string>
    <string name="text_credit">- Outrória (Anavitória, OutroEu)</string>
    <string name="cadastrar">Ainda não é registrado? Cadastre-se!</string>
    <string name="txt_user">Usuário:</string>
    <string name="title_profile">Perfil de usuario</string>

    <string-array name="fav_options">
        <item>Ana Clara</item>
        <item>Vitória Falcão</item>
        <item>Ambas</item>
    </string-array>

    <integer-array name="item_musica_ano">
        <item>2017</item>
        <item>2017</item>
        <item>2017</item>
    </integer-array>

    <string-array name="item_musica_album">
        <item>O tempo é agora</item>
        <item>O tempo é agora</item>
        <item>O tempo é agora</item>
    </string-array>

    <string-array name="item_musica_duracao">
        <item>2:00</item>
        <item>2:00</item>
        <item>2:00</item>
    </string-array>

    <string-array name="item_musica_nome">
        <item>Outroria</item>
        <item>Outroria</item>
        <item>Outroria</item>
    </string-array>

    <array name="item_musica_foto">
        <item>@drawable/ana</item>
        <item>@drawable/ana</item>
        <item>@drawable/ana</item>
    </array>

</resources>
