<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:overScrollMode="ifContentScrolls"
            android:background="@color/AzulEscuro">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/AmareloBege"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/title_cadastro"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/AmareloClaro" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_view"
                android:layout_margin="3dp"
                card_view:cardBackgroundColor="#f0f0f0"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="3dp"
                card_view:contentPadding="10dp"
                android:clickable="true">
                <!--  User  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_user"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/AzulMaisEscuro"/>

                <EditText
                    android:id="@+id/edt_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user"
                    android:textColorHint="@color/AzulEscuroMaisClaro"/>

                <!--  Email  -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_email"
                    android:textColor="@color/AzulMaisEscuro"/>

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textColorHint="@color/AzulEscuroMaisClaro"/>

                <!--  Pass  -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_pass"
                    android:textColor="@color/AzulMaisEscuro"/>

                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_pass"
                    android:textColorHint="@color/AzulEscuroMaisClaro"/>

                <!--  Confirm Pass  -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_confirm_pass"
                    android:textColor="@color/AzulMaisEscuro"/>

                <EditText
                    android:id="@+id/edt_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_confirm_pass"
                    android:textColorHint="@color/AzulEscuroMaisClaro"/>

                <!--  Sexo  -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sex"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/AzulMaisEscuro"/>

                <RadioGroup
                    android:id="@+id/rb_group_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >
                    <RadioButton
                        android:id="@+id/rb_fem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_rb_fem"
                        android:buttonTint="@color/AmareloBege"
                        android:textColor="@color/AzulEscuroMaisClaro"/>
                    <RadioButton
                        android:id="@+id/rb_masc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_rb_masc"
                        android:buttonTint="@color/AmareloBege"
                        android:textColor="@color/AzulEscuroMaisClaro"/>
                    <RadioButton
                        android:id="@+id/rb_undefined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_rb_undefined"
                        android:checked="true"
                        android:buttonTint="@color/AmareloBege"
                        android:textColor="@color/AzulEscuroMaisClaro"/>
                </RadioGroup>

                <!--  Fav  -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_fav"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/AzulMaisEscuro"/>
                <Spinner
                    android:id="@+id/spnn_fav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/fav_options"
                    android:textColor="@color/AzulEscuroMaisClaro"
                    />

                <!--  Goods  -->
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_goodies"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_columnSpan="3"
                        android:textColor="@color/AzulMaisEscuro"
                        />
                    <CheckBox
                        android:id="@+id/cb_album"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_cb_album"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:textColor="@color/AzulEscuroMaisClaro"
                        android:buttonTint="@color/AzulEscuroMaisClaro"/>
                    <CheckBox
                        android:id="@+id/cb_dvd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cb_dvd"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:textColor="@color/AzulEscuroMaisClaro"
                        android:buttonTint="@color/AzulEscuroMaisClaro"/>
                    <CheckBox
                        android:id="@+id/cb_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cb_poster"
                        android:layout_row="1"
                        android:layout_column="2"
                        android:textColor="@color/AzulEscuroMaisClaro"
                        android:buttonTint="@color/AzulEscuroMaisClaro"/>
                    <CheckBox
                        android:id="@+id/cb_camiseta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cb_camiseta"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:textColor="@color/AzulEscuroMaisClaro"
                        android:buttonTint="@color/AzulEscuroMaisClaro"/>
                    <CheckBox
                        android:id="@+id/cb_moletom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_rb_moletom"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:textColor="@color/AzulEscuroMaisClaro"
                        android:buttonTint="@color/AzulEscuroMaisClaro"/>
                    <CheckBox
                        android:id="@+id/cb_colar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cb_colar"
                        android:layout_row="2"
                        android:layout_column="2"
                        android:textColor="@color/AzulEscuroMaisClaro"
                        android:buttonTint="@color/AzulEscuroMaisClaro"/>
                    <CheckBox
                        android:id="@+id/cb_pulseira"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cb_pulseira"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:textColor="@color/AzulEscuroMaisClaro"
                        android:buttonTint="@color/AzulEscuroMaisClaro"/>
                    <CheckBox
                        android:id="@+id/cb_agenda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cb_agenda"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:textColor="@color/AzulEscuroMaisClaro"
                        android:buttonTint="@color/AzulEscuroMaisClaro"/>
                    <CheckBox
                        android:id="@+id/cb_outros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cb_outros"
                        android:layout_row="3"
                        android:layout_column="2"
                        android:textColor="@color/AzulEscuroMaisClaro"
                        android:buttonTint="@color/AzulEscuroMaisClaro"/>
                </GridLayout>

                <!--  Submit  -->
                <Button
                    android:id="@+id/btn_cadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/AmareloBege"
                    android:onClick="onClickCadastrarUsuario"
                    android:text="@string/text_btn_cadastro"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

</ScrollView>