<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="login.LoginActivity"
    android:paddingTop="20dp"
    android:theme="@style/AppTheme.NoActionBar"
    android:orientation="vertical"
    android:background="@color/AzulEscuro"
    >


    <ImageView
        android:layout_width="352dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:text="@string/login"-->
<!--        android:textSize="24sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="45dp">

        <TextView
            android:id="@+id/e-mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textSize="20sp"
            android:textColor="@color/AmareloBege"
            android:layout_marginTop="0dp"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="294dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:inputType="textEmailAddress"
            android:hint="@string/placeholder_email"
            android:textColorHint="@color/AmareloMaisClaro"
            android:backgroundTint="@color/AmareloMaisClaro"
            android:textColor="@color/AmareloMaisClaro"
            />

        <TextView
            android:id="@+id/Senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textColor="@color/AmareloBege"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/input_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:inputType="textPassword"
            android:hint="@string/placeholder_senha"
            android:textColorHint="@color/AmareloMaisClaro"
            android:backgroundTint="@color/AmareloMaisClaro"
            android:textColor="@color/AmareloMaisClaro"
            />
    </LinearLayout>

    <Button
        android:id="@+id/botao_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/AmareloBege"
        android:textColor="@color/AzulEscuro"
        android:layout_marginTop="40dp"
        android:text="@string/entrar" />

    <Button
        android:id="@+id/botao_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textColor="@color/AmareloMaisClaro"
        android:paddingTop="0dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_gravity="center" />


</LinearLayout>