<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/AmareloMaisClaroAinda">


    <ImageView
        android:layout_width="354dp"
        android:layout_height="324dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/anavitoria"
        android:src="@drawable/logoazul" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/letra_outroria"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="@color/AzulEscuro"/>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/siga_redes_sociais"
        android:textSize="18sp"
        android:textColor="@color/AzulEscuro"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/logo_fb"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/anavitoria"
            android:src="@drawable/logo_fb"
            android:layout_marginHorizontal="3dp"/>
        <ImageView
            android:id="@+id/logo_tw"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/anavitoria"
            android:src="@drawable/logo_tw"
            android:layout_marginHorizontal="3dp"/>
        <ImageView
            android:id="@+id/logo_insta"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/anavitoria"
            android:src="@drawable/logo_insta"
            android:layout_marginHorizontal="3dp"/>
    </LinearLayout>


</LinearLayout>